list modify in about

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <h2>Education</h2>
         <p><strong>High School, Islamic Secondary School</strong><br>September 2019 - June 2020</p>
         <p><strong>An-Najah National University, Nablus — Bachelor’s in Computer Science</strong><br>September 2020 -
-            June 2024<br>GPA: 2.85</p>
+            June 2024<br>GPA: 2.88</p>
         <h2>Career Objectives</h2>
         <p>As a Computer Science student, I aim to gain valuable experience at top tech companies and become an active
             freelancer at the same time. My goal is to improve my technical skills in areas like web and mobile
@@ -39,23 +39,25 @@
             projects. My aim is to become a well-rounded professional in computer science, have my own business managing
             tech projects, and make a difference in the industry.</p>
         <h2>Skills</h2>
-        <p>
-            - Team Player<br>
-            - Version Control/GIT<br>
-            - OOP/SOLID<br>
-            - Problem Solving<br>
-            - C/C++<br>
-            - C#<br>
-            - Java<br>
-            - Android Development<br>
-            - Flutter/Dart<br>
-            - Unity 3D<br>
-            - AI<br>
-            - SQL/MySQL DB<br>
-            - Oracle<br>
-            - HTML/CSS/JS<br>
-            - Blender
-        </p>
+        <ul>
+            <li>Team Player</li>
+            <li>Version Control/GIT</li>
+            <li>OOP/SOLID</li>
+            <li>Django</li>
+            <li>HTML/CSS/JS</li>
+            <li>Bootstrap</li>
+            <li>Flutter/Dart</li>
+            <li>Android Dev</li>
+            <li>C/C++/C#</li>
+            <li>Java</li>
+            <li>Python</li>
+            <li>Unity Game Engine</li>
+            <li>Multi-Agent System AI</li>
+            <li>SQL/MySQL DB</li>
+            <li>Oracle</li>
+            <li>Blender</li>
+            <li>Problem Solving</li>
+        </ul>
     </section>
     <section class="contact-section">
         <h3>Contact me</h3>
